  dialogs

wxGTK:

- fixes to wxTextCtrl scrolling under GTK2 (Nerijus Baliunas)
- fix for crash when using user-dashed lines (Chris Borgolte)
- fixed wxChoice::Delete() in presence of client data
- allow calling wxWindow::SetFont if window not yet created
- use same average character width as other ports when calculating dialog units
- fixed mouse wheel handling under GTK2 (Hugh Fisher)

wxMac:

- use same average character width as other ports when calculating dialog units
- implemented handling of mouse wheel
- fix for long file names (longer than 32 characters) in file dialogs
- use unix sockets for Mach-o builds

wxHTML:

- wxHtmlHelpController now supports compressed MS HTML Help files (*.chm)
  on Unix (Markus Sinner)

Unix:

- Added XFree86 resolution changing using xf86vidmode extensions (Ryan Norton)


2.5.0
-----

All:

- It is now possible to build several smaller libraries instead of single
  huge wxWindows library; wxBase is now dependency of GUI ports rather then
  separately compiled library
- added wxDateSpan::operator==() and !=() (Lukasz Michalski)
- added wxFileName::GetForbiddenChars() (Dimitri Schoolwerth)
- use true/false throughout the library instead of TRUE/FALSE
- wxStopWatch::Start() resumes the stop watch if paused, as per the docs
- added wxDirTraverser::OnOpenError() to customize the error handling
- added wxArray::SetCount()
- wxFile, wxFFile, wxTextFile and wxTempFile now all use UTF-8 encoding
  by default in Unicode mode
- bug in wxDateTime with timezones on systems with tm_gmtoff in struct tm fixed
- added wx/math.h (John Labenski)
- added Catalan translations (Pau Bosch i Crespo)
- added Ukrainian translations (Eugene Manko)
- fixed bug with deleting entries at root level in wxFileConfig
- chkconf.h now includes platform-specific versions (for MSW
  and Mac) which contain some tests that were in setup.h
- added event sink argument to wxEvtHandler::Connect()