@@ -141,6 +141,7 @@ wxGTK:
 - allow calling wxWindow::SetFont if window not yet created
 - use same average character width as other ports when calculating dialog units
 - fixed mouse wheel handling under GTK2 (Hugh Fisher)
+- wxNotebook::HitTest() implemented (Daniel Lundqvist)
 
 wxMac:
 
